test_suite/tests/ui/unknown-attribute/field.stderr
error: unknown serde field attribute `abc`
 --> $DIR/field.rs:5:13
  |
5 |     #[serde(abc = "xyz")]
  |             ^^^

error: aborting due to previous error

